[package]
name = "hss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen = "0.9.0"
rand = "0.8.4"
rand-old = { package = "rand", version = "^0.7.0" }
itertools = "0.10.1"
ed25519-dalek = "1.0.1"
hmac = "0.11.0"
sha2 = "0.9.8"