[package]
name = "hss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen = "0.9.0"
rand = "0.8.4"
ed_rand = { package = "rand", version = "^0.7.0" }
itertools = "0.10.1"
ed25519-dalek = "1.0.1"
hmac = "0.11.0"
sha2 = "0.9.8"
bn-plus = "0.4.4"
bn-rand = {package = "rand", version = "^0.3" }
rand_chacha = "0.3.1"
rustc-serialize = "0.3.24"
serde = "1.0.130"
bincode = "0.6"
rsa = "0.5.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"